# smart-data-analytics-toolkit

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  sracth.py
src/sda_toolkit/: __init__.py  analysis.py  cleaning.py  cli.py  loader.py  logging_config.py  report.py  visualization.py
tests/: __init__.py  test_loader.py  test_smoke.py
